--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 .App {
   text-align: center;
+  background: #15202B;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+html {
+  background: #15202B;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -32,6 +37,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
