--- a/src/views/Login.css
+++ b/src/views/Login.css
@@ -8,6 +8,8 @@
 .login-form h1 {
     font-weight: 400;
     font-size: 36px;
+    text-align: center;
+    margin-bottom: 10%;
 }
 
 .col-form {
@@ -24,5 +26,25 @@
 
 .custom-login-button {
     position: absolute;
-    right: 2%;
+    right: 35%;
+    width: 30%;
+}
+
+.select-option {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #fff;
+    line-height: 0.1em;
+    /* margin: 10px 0 20px; */
+    margin-bottom: 10%;
+}
+
+.select-option span {
+    background: #15202B;
+    padding: 0 10px;
+}
+
+.custom-google-button {
+    text-align: -webkit-center;
+    margin-bottom: 10%;
 }
